<resources>
    <string name="app_name">Shuta</string>
    <string name="loginBtn">Login</string>
    <string name="passwordHint">Password</string>
    <string name="RegNumberHint">RegNumber</string>
    <string name="login_name">Login</string>
    <string name="subjects">Subjects</string>
    <string name="students">Students</string>
    <string name="staff">Staff</string>
    <string name="viewresults">View Results</string>
    <string name="sub_teachers">Subjects V.S Teachers</string>
    <string name="Sub_Code">Subject Code</string>
    <string name="subject">Subject</string>
    <string name="marks">Marks</string>
    <string name="teacher">Teacher</string>
    <string name="title_activity_staff_landing_page">StaffLandingPage</string>
    <string name="classes">Classes</string>
    <string name="forgot_password_click_here">Forgot Password? Click here</string>
    <string name="remember_me">Remember Me</string>
    <string name="todo">TODO</string>
</resources>
